--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,11 +3,23 @@
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	<TextView android:id="@+id/status_text" android:layout_height="wrap_content"
-		android:text="@string/hello" android:layout_width="wrap_content" />
-	<EditText android:id="@+id/station_url" android:layout_height="wrap_content"
-		android:text="lastfm://artist/offspring/similarartists" android:layout_width="wrap_content"
+		android:text="@string/version" android:layout_width="wrap_content" />
+	
+	
+	<LinearLayout android:orientation="horizontal"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:layout_gravity="left">
+    <Spinner android:id="@+id/station_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawSelectorOnTop="true"
+        android:prompt="@string/station_spinner_prompt"
+    />		
+	<EditText android:id="@+id/station_name" android:layout_height="wrap_content"
+		android:text="Offspring" android:layout_width="fill_parent" android:layout_weight="1"
 		android:clickable="true" android:singleLine="true" />
-
+	</LinearLayout>
+	
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:layout_gravity="left">
@@ -63,6 +75,9 @@
 			android:src="@drawable/share" />
 
 	</LinearLayout>
-
+	<TextView android:id="@+id/error_text" android:layout_height="fill_parent"
+		android:text="" android:layout_width="fill_parent" android:textColor="#000000"
+		android:visibility="invisible"
+		android:background="#f88017" padding="5dip"/>
 
 </LinearLayout>
