--- a/res/layout/userinfo.xml
+++ b/res/layout/userinfo.xml
@@ -4,10 +4,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_height="wrap_content" 
-    android:text="@string/user_info_title"
-    android:layout_width="wrap_content"/>
+
+    <TextView
+        android:layout_width="fill_parent" android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:paddingBottom="4dip"
+        android:text="@string/username"/>
 
     <EditText android:id="@+id/username"
         android:layout_width="fill_parent"
@@ -15,6 +17,12 @@
         android:clickable="true"
         android:singleLine="true"
     />
+
+    <TextView
+        android:layout_width="fill_parent" android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:paddingBottom="4dip"
+        android:text="@string/password"/>
 
     <EditText android:id="@+id/password"
         android:layout_width="fill_parent"
