--- a/res/layout/userinfo.xml
+++ b/res/layout/userinfo.xml
@@ -31,6 +31,14 @@
         android:singleLine="true"
         android:password="true"
     />
+
+    <TextView
+        android:layout_width="fill_parent" android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingTop="30dip"
+    	android:autoLink="all"        
+        android:text="@string/signup"/>    
+    
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
