--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -3,6 +3,9 @@
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	
+	<TextView android:id="@+id/status_text" android:layout_height="wrap_content"
+		android:text="" android:layout_width="wrap_content" />
+	
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="fill_parent" android:layout_height="wrap_content"
 		android:layout_gravity="left">
@@ -67,8 +70,9 @@
 			android:src="@drawable/share" />
 
 	</LinearLayout>
-
-	<TextView android:id="@+id/status_text" android:layout_height="wrap_content"
-		android:text="@string/hello" android:layout_width="wrap_content" />
+<TextView android:id="@+id/error_text" android:layout_height="fill_parent"
+		android:text="" android:layout_width="fill_parent" android:textColor="#000000"
+		android:visibility="invisible"
+		android:background="#f88017"/>
 
 </LinearLayout>
