--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -9,9 +9,9 @@
     android:text="[Unofficial] Android LastFM Player"
     android:layout_width="wrap_content"
     android:textSize="30dip"/>
-<TextView
+<TextView android:id="@+id/version"
     android:layout_height="wrap_content" 
-    android:text="@string/version"
+    android:text=""
     android:layout_width="wrap_content"
     android:textSize="20dip"/>
 <TextView  
