--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,7 @@
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
 	<TextView android:id="@+id/status_text" android:layout_height="wrap_content"
-		android:text="@string/version" android:layout_width="wrap_content" />
+		android:text="" android:layout_width="wrap_content" />
 	
 	
 	<LinearLayout android:orientation="horizontal"
