--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -27,8 +27,15 @@
 <TextView  
     android:layout_height="wrap_content" 
     android:paddingTop="5dip"
+    android:paddingBottom="45dip"
     android:autoLink="all"
     android:text="Or visit home page at http://lastfm.ajaxie.com"
+    android:layout_width="wrap_content"/>
+
+<Button android:id="@+id/reset_button"
+    android:layout_height="wrap_content" 
+    android:autoLink="all"
+    android:text="Reset settings"
     android:layout_width="wrap_content"/>
     
 </LinearLayout>
