--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -2,79 +2,113 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:layout_width="fill_parent"
 	android:layout_height="fill_parent">
-	
+
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="fill_parent" android:layout_height="wrap_content"
 		android:layout_gravity="right">
 
-	<LinearLayout android:orientation="vertical"
-		android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1"
-		android:layout_gravity="right" >
-	<TextView android:id="@+id/status_text" android:layout_height="wrap_content"
-		android:text="playing" android:layout_width="fill_parent"  />		
-	<TextView android:id="@+id/radio_name" android:layout_height="fill_parent"
-		android:text="" android:layout_width="fill_parent" 
-		android:textSize="18sp"/>
-	</LinearLayout>
-	
-	 <Button android:id="@+id/tune_button" android:layout_width="85dip"
-	 android:text="Tune" android:layout_height="65dip"/>
-	 
-	</LinearLayout>
+		<LinearLayout android:orientation="vertical"
+			android:layout_width="fill_parent" android:layout_height="wrap_content"
+			android:layout_weight="1" android:layout_gravity="right">
+			<TextView android:id="@+id/status_text"
+				android:layout_height="wrap_content" android:text="playing"
+				android:layout_width="fill_parent" />
+			<TextView android:id="@+id/radio_name"
+				android:layout_height="fill_parent" android:text=""
+				android:layout_width="fill_parent" android:textSize="18sp" />
+		</LinearLayout>
 
-	<LinearLayout android:orientation="horizontal"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_gravity="left">
-
-		<ImageSwitcher android:id="@+id/album_view" android:layout_width="100dip"
-			android:layout_height="100dip" android:paddingRight="8dip"/>
-			
 		<LinearLayout android:orientation="vertical"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
 			android:layout_gravity="right">
-			<TextView android:id="@+id/creator_name_text" android:layout_height="wrap_content"
-				android:text="" android:layout_width="wrap_content" />
-			<TextView android:id="@+id/album_name_text" android:layout_height="wrap_content"
-				android:text="" android:layout_width="wrap_content" />
-			<TextView android:id="@+id/track_name_text" android:layout_height="wrap_content"
-				android:text="" android:layout_width="wrap_content" />
-			<TextView android:id="@+id/time_counter" android:layout_height="wrap_content"
-				android:textSize="45dip" android:text="0:00" android:layout_width="wrap_content" />							
+
+			<TextView android:layout_height="5px" android:text=""
+				android:layout_width="fill_parent" />
+
+			<Button android:id="@+id/tune_button" android:layout_width="100dip"
+				android:textSize="18sp" android:drawableLeft="@drawable/tune_icon"
+				android:text="Tune" android:layout_height="65dip" android:textStyle="bold" />
 		</LinearLayout>
 
 	</LinearLayout>
 
+	<ViewSwitcher android:id="@+id/switcher"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:baselineAligned="false" android:layout_gravity="center_horizontal">
+
+		<LinearLayout android:orientation="horizontal"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"
+			android:layout_gravity="left">
+
+			<TextView android:layout_height="5px" android:text=""
+				android:layout_width="5px" />
+
+			<ImageSwitcher android:id="@+id/album_view"
+				android:layout_width="100dip" android:layout_height="100dip"
+				android:paddingRight="8dip" />
+
+			<LinearLayout android:orientation="vertical"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"
+				android:layout_gravity="right">
+				<TextView android:id="@+id/creator_name_text"
+					android:layout_height="wrap_content" android:text=""
+					android:layout_width="wrap_content" android:textSize="18sp" />
+				<TextView android:id="@+id/album_name_text"
+					android:layout_height="wrap_content" android:text=""
+					android:layout_width="wrap_content" />
+				<TextView android:id="@+id/track_name_text"
+					android:layout_height="wrap_content" android:text=""
+					android:layout_width="wrap_content" android:textSize="18sp" />
+				<TextView android:id="@+id/time_counter"
+					android:layout_height="wrap_content" android:textSize="45dip"
+					android:text="0:00" android:layout_width="wrap_content" />
+			</LinearLayout>
+
+		</LinearLayout>
+		<LinearLayout android:orientation="horizontal"
+			android:id="@+id/loading_container" android:layout_width="fill_parent"
+			android:layout_height="wrap_content" android:layout_gravity="center">
+
+			<ImageView android:id="@+id/loading_image"
+				android:layout_width="wrap_content" android:layout_height="48dip"
+				android:paddingRight="8dip" />
+			<TextView android:id="@+id/loading_text"
+				android:layout_height="wrap_content" android:textSize="32dip"
+				android:text="Connecting" android:layout_width="wrap_content" />
+		</LinearLayout>
+
+	</ViewSwitcher>
+
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
 		android:layout_gravity="left">
-		<ImageButton android:layout_width="80dip" android:scaleType="fitCenter"
-			android:layout_height="80dip" android:id="@+id/play_button"
-			android:src="@drawable/play" />
+		<ImageButton android:layout_width="80dip"
+			android:scaleType="fitCenter" android:layout_height="80dip"
+			android:id="@+id/play_button" android:src="@drawable/play" />
 
-		<ImageButton android:layout_width="80dip" android:scaleType="fitCenter"
-			android:layout_height="80dip" android:id="@+id/stop_button"
-			android:src="@drawable/stop" />
+		<ImageButton android:layout_width="80dip"
+			android:scaleType="fitCenter" android:layout_height="80dip"
+			android:id="@+id/stop_button" android:src="@drawable/stop" />
 
-		<ImageButton android:layout_width="80dip" android:scaleType="fitCenter"
-			android:layout_height="80dip" android:id="@+id/skip_button"
-			android:src="@drawable/skip" />
+		<ImageButton android:layout_width="80dip"
+			android:scaleType="fitCenter" android:layout_height="80dip"
+			android:id="@+id/skip_button" android:src="@drawable/skip" />
 
-		<ImageButton android:layout_width="80dip" android:scaleType="fitCenter"
-			android:layout_height="80dip" android:id="@+id/love_button"
-			android:src="@drawable/love" />
+		<ImageButton android:layout_width="80dip"
+			android:scaleType="fitCenter" android:layout_height="80dip"
+			android:id="@+id/love_button" android:src="@drawable/love" />
 
-		<ImageButton android:layout_width="80dip" android:scaleType="fitCenter"
-			android:layout_height="80dip" android:id="@+id/ban_button"
-			android:src="@drawable/ban" />
+		<ImageButton android:layout_width="80dip"
+			android:scaleType="fitCenter" android:layout_height="80dip"
+			android:id="@+id/ban_button" android:src="@drawable/ban" />
 
-		<ImageButton android:layout_width="80dip" android:scaleType="fitCenter"
-			android:layout_height="80dip" android:id="@+id/share_button"
-			android:src="@drawable/share" />
+		<ImageButton android:layout_width="80dip"
+			android:scaleType="fitCenter" android:layout_height="80dip"
+			android:id="@+id/share_button" android:src="@drawable/share" />
 
 	</LinearLayout>
-<TextView android:id="@+id/error_text" android:layout_height="fill_parent"
+	<TextView android:id="@+id/error_text" android:layout_height="fill_parent"
 		android:text="" android:layout_width="fill_parent" android:textColor="#000000"
-		android:visibility="invisible"
-		android:background="#f88017"/>
+		android:visibility="invisible" android:background="#f88017" />
 
 </LinearLayout>
