--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -5,7 +5,7 @@
 	
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:layout_gravity="right">
+		android:layout_gravity="center_vertical">
 
 	<LinearLayout android:orientation="vertical"
 		android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1"
@@ -16,49 +16,66 @@
 		android:text="" android:layout_width="fill_parent" 
 		android:textSize="18sp"/>
 	</LinearLayout>
+
+	<LinearLayout android:orientation="vertical"
+		android:layout_width="wrap_content" android:layout_height="wrap_content"
+		android:layout_gravity="right" >
+
+	<TextView android:layout_height="5px"
+		android:text="" android:layout_width="fill_parent"  />		
 	
-	 <Button android:id="@+id/tune_button" android:layout_width="85dip"
-	 android:text="Tune" android:layout_height="65dip"/>
-	 
+	 <Button android:id="@+id/tune_button" android:layout_width="100dip" android:textSize="18sp"
+	 android:drawableLeft="@drawable/tune_icon" 
+	 android:text="Tune" android:layout_height="65dip" android:textStyle="bold"/>
+	</LinearLayout>
+		 
 	</LinearLayout>
 	
-	<ViewSwitcher android:id="@+id/switcher" android:layout_width="fill_parent" android:layout_height="wrap_content">
+	<ViewSwitcher android:id="@+id/switcher" android:layout_width="fill_parent" 
+	android:layout_height="wrap_content" android:baselineAligned="false" android:layout_gravity="center_horizontal" >
+	
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_gravity="left">
+		android:layout_gravity="left" >
+
+	<TextView android:layout_height="5px"
+		android:text="" android:layout_width="5px"  />		
 
 		<ImageSwitcher android:id="@+id/album_view" android:layout_width="100dip"
 			android:layout_height="100dip" android:paddingRight="8dip"/>
 						
 		<LinearLayout android:orientation="vertical"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:layout_gravity="right">
+			android:layout_width="wrap_content" android:layout_height="wrap_content"			>
 			<TextView android:id="@+id/creator_name_text" android:layout_height="wrap_content"
-				android:text="" android:layout_width="wrap_content" />
+				android:layout_weight="1"
+				android:text="" android:layout_width="fill_parent" android:textSize="18sp" />
 			<TextView android:id="@+id/album_name_text" android:layout_height="wrap_content"
 				android:text="" android:layout_width="wrap_content" />
 			<TextView android:id="@+id/track_name_text" android:layout_height="wrap_content"
 				android:text="" android:layout_width="wrap_content" />
 			<TextView android:id="@+id/time_counter" android:layout_height="wrap_content"
-				android:textSize="45dip" android:text="0:00" android:layout_width="wrap_content" />							
+				android:textSize="40dip" android:text="0:00" android:layout_width="wrap_content" />							
 		</LinearLayout>
 
 	</LinearLayout>
-		<LinearLayout android:orientation="vertical" android:id="@+id/loading_container" 
-			android:layout_width="fill_parent" android:layout_height="wrap_content"
-			android:layout_gravity="center_horizontal">
-			<TextView android:id="@+id/loading_text" android:layout_height="wrap_content"
-				android:textSize="45dip" android:text="Connecting" android:layout_width="wrap_content" />
 
-			<ImageView android:id="@+id/loading_image" android:layout_width="48dip"
-			android:layout_height="48dip" android:paddingRight="8dip"/>
+	<LinearLayout android:orientation="horizontal" android:id="@+id/loading_container"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:layout_gravity="center">
+
+		<ImageView android:id="@+id/loading_image"
+			android:layout_width="wrap_content" android:layout_height="48dip"
+			android:paddingRight="8dip" />
+		<TextView android:id="@+id/loading_text"
+			android:layout_height="wrap_content" android:textSize="32dip"
+			android:text="Connecting" android:layout_width="wrap_content" />
 	</LinearLayout>
 	
 	</ViewSwitcher>
 
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_gravity="left">
+		android:layout_gravity="center_horizontal">
 		<ImageButton android:layout_width="100dip"
 			android:layout_height="100dip" android:id="@+id/play_button"
 			android:src="@drawable/play" />
@@ -75,7 +92,7 @@
 	
 	<LinearLayout android:orientation="horizontal"
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_gravity="left">
+		android:layout_gravity="center_horizontal">
 		<ImageButton android:layout_width="100dip"
 			android:layout_height="100dip" android:id="@+id/love_button"
 			android:src="@drawable/love" />
